...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_search">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_product_home"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/item_product" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
...
