package com.bimabagaskhoro.taskappphincon

import androidx.test.espresso.Espresso
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.action.ViewActions.typeText
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.ext.junit.runners.AndroidJUnit4
import com.bimabagaskhoro.taskappphincon.feature.auth.LoginFragment
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith

@RunWith(AndroidJUnit4::class)
class LoginFragmentTest {

    @Test
    fun testLoginButton() {
//        val fragment = LoginFragment.newInstance()
//        FragmentTestUtil.startFragment(fragment)
//        onView(withId(R.id.edt_email_login)).perform(typeText("dummyMail@gmail.com"))
//        onView(withId(R.id.edt_password_login)).perform(typeText("test_password"))
//        Espresso.closeSoftKeyboard()
//        onView(withId(R.id.btn_login_fragment)).perform(click())
//        onView(withText("Logged in as test_user")).check(matches(isDisplayed()))
    }
}